jellyfin/jellyfin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: jellyfin-data
              mountPath: /config
      volumes:
        - name: jellyfin-data
          persistentVolumeClaim:
            claimName: jellyfin-pvc
