jellyfin/ubuntu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jellyfin-config-shell
spec:
  containers:
    - name: ubuntu
      image: ubuntu:22.04
      imagePullPolicy: IfNotPresent
      command: ["/bin/sh", "-c", "sleep infinity"]
      volumeMounts:
        - name: jellyfin-config
          mountPath: /config
  restartPolicy: Always
  volumes:
    - name: jellyfin-config
      persistentVolumeClaim:
        claimName: jellyfin-config
